<resources>
    <string name="app_name">Tagger</string>
    <string name="tag">🏷</string>
    <string name="pin_placeholder">Tu PIN de 6 dígitos</string>
    <string name="start">Empezar</string>
    <string name="app_description">Con Tagger podés etiquetar tu vida, desde un lápiz hasta un viaje. Empecemos configurando tu PIN.</string>
    <string name="error_validating_pin">Por favor revisa el PIN e intenta nuevamente</string>
    <string name="registered">Registrado! 🚀</string>
    <string name="add_item">Agregar Item</string>
    <string name="item_saved">🎉 Item guardado 🎉</string>
    <string name="error_saving_item">Disculpa, algo salió mal al guardar el item, intenta nuevamente</string>
    <string name="save_item">Guardar Item</string>
    <string name="error_loading_item">Algo salió mal al cargar el item :(</string>
    <string name="error_loading_items_short">Algo salió mal al cargar los items D:</string>
    <string name="error_loading_items_long">(╯°□°)╯︵ ┻━┻ \n\nAlgo salió mal al cargar los items\n\nPresiona aquí para intentar nuevamente :)</string>
    <string name="title">Título</string>
    <string name="description">Descripción</string>
    <string name="rating">Calificación</string>
    <string name="save">Guardar</string>
    <string name="error_invalid_title">Favor ingresa el título</string>
    <string name="error_invalid_rating">Favor selecciona un rating</string>
    <string name="trying_again">Intentando nuevamente...</string>
</resources>