<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".taggedItems.details.SaveTaggedItemActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_3x"
        android:layout_marginTop="@dimen/spacing_3x"
        android:layout_marginEnd="@dimen/spacing_3x"
        android:hint="@string/title"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_3x"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutTitle"
        app:layout_constraintStart_toStartOf="@id/inputLayoutTitle"
        app:layout_constraintEnd_toEndOf="@id/inputLayoutTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:lines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/ratingLabel"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_3x"
        android:text="@string/rating"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutDescription"
        app:layout_constraintStart_toStartOf="@id/inputLayoutDescription"
        app:layout_constraintEnd_toEndOf="@id/inputLayoutDescription" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_base"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="1"
        tools:rating="3"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/ratingLabel"
        app:layout_constraintStart_toStartOf="@id/ratingLabel"
        app:layout_constraintEnd_toEndOf="@id/ratingLabel" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/buttonSaveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/spacing_2x"
        android:text="@string/save"
        android:contentDescription="@string/save_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>